Fixed overflow in effect box

--- a/src/styles/components/App.styl
+++ b/src/styles/components/App.styl
@@ -10,23 +10,22 @@ a
 		position: relative
 		width: 100%
 		height: 100%
-		display: flex
-		flex-direction: column
 		cursor: default
 		.inner
-			height: 100%
+			height: calc(100% - 70px)
 			display: flex
 			background-color: #2e2e2e
 			.left, .right
 				width: 100%
+				height: 100%
 				position: relative
 				display: flex
-				flex-grow: 1
 				padding: 12px
 				box-sizing: border-box
 			.left
 				flex-direction: row
 			.right
+				flex-shrink: 0
 				max-width: 580px
 				padding-left: 0
 				flex-direction: column
@@ -40,11 +39,11 @@ a
 				.left
 					margin: 0
 					padding-bottom: 0
-					min-height: 50%
+					max-height: 50%
 					background-color: #2e2e2e;
 				.right
 					max-width: 100%
 					flex-direction: column
 					margin: 0
 					padding-left: 12px
-					min-height: 50%
+					max-height: 50%
