--- a/src/styles/components/Behaviours.styl
+++ b/src/styles/components/Behaviours.styl
@@ -1,25 +1,23 @@
 .behaviours-component-container
-	height: 100%
 	margin-bottom: 12px
-	display: flex
-	flex-flow: column
+	height: calc(100% - 152px)
 	.behaviours-component
-		height: 100%
 		display: flex
 		flex-direction: column
+		flex-grow: 1
 		.content
-			display: flex
-			flex-flow: column
+			height: calc(100% - 43px)
 			.content-component
 				overflow-y: scroll
 				padding: 2px
 				padding-top: 0
-				max-height: 736px
+				flex-grow: 1
+				height: 100%
 				.alpha
 					height: 35px
 					background: #383838
 					h4
-						box-sizing: border-box;
+						box-sizing: border-box
 				.values-component-container
 					height: 35px
 					.values-component
@@ -36,7 +34,7 @@
 							background: #1e2225
 							border: none
 				.head
-					padding: 10px;
+					padding: 10px
 					font-size: 0.75rem
 
 	@media screen  and (max-width : 1090px)
